; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_super.c_btrfs_set_max_workers.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_super.c_btrfs_set_max_workers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_workers = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.btrfs_workers*, i32)* @btrfs_set_max_workers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btrfs_set_max_workers(%struct.btrfs_workers* %0, i32 %1) #0 {
  %3 = alloca %struct.btrfs_workers*, align 8
  %4 = alloca i32, align 4
  store %struct.btrfs_workers* %0, %struct.btrfs_workers** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.btrfs_workers*, %struct.btrfs_workers** %3, align 8
  %6 = getelementptr inbounds %struct.btrfs_workers, %struct.btrfs_workers* %5, i32 0, i32 1
  %7 = call i32 @spin_lock_irq(i32* %6)
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.btrfs_workers*, %struct.btrfs_workers** %3, align 8
  %10 = getelementptr inbounds %struct.btrfs_workers, %struct.btrfs_workers* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load %struct.btrfs_workers*, %struct.btrfs_workers** %3, align 8
  %12 = getelementptr inbounds %struct.btrfs_workers, %struct.btrfs_workers* %11, i32 0, i32 1
  %13 = call i32 @spin_unlock_irq(i32* %12)
  ret void
}

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
